# controller/message.go
@@ -10,18 +10,9 @@ import (
 	"github.com/kerimcanbalkan/Portfolio-API/config"
 	_ "github.com/kerimcanbalkan/Portfolio-API/docs"
 	"github.com/kerimcanbalkan/Portfolio-API/models"
+	_ "github.com/kerimcanbalkan/Portfolio-API/types"
 	"gorm.io/gorm"
 )
-
-type jsonResponse struct {
-	Error string `json:"error"`
-}
-
-type CreateMessageRequest struct {
-	Name    string `json:"name"`
-	Email   string `json:"email"`
-	Message string `json:"message"`
-}
 
 // GetMessages godoc
 // @Summary Retrieve all messages
@@ -41,7 +32,7 @@ func GetMessages(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Message ID"
 // @Success 200 {object} models.Message
-// @Failure 404 {object} jsonResponse
+// @Failure 404 {object} types.jsonResponse
 // @Router /messages/{id} [get]
 func GetMessageById(c *gin.Context) {
 	id := c.Param("id")
@@ -59,9 +50,9 @@ func GetMessageById(c *gin.Context) {
 // @Description Create and save a new message in the database
 // @Accept json
 // @Produce json
-// @Param message body CreateMessageRequest true "Message object"
+// @Param message body types.CreateMessageRequest true "Message object"
 // @Success 201 {object} models.Message
-// @Failure 400 {object} jsonResponse
+// @Failure 400 {object} types.jsonResponse
 // @Router /messages [post]
 func CreateMessage(c *gin.Context) {
 	var message models.Message
@@ -92,8 +83,8 @@ func CreateMessage(c *gin.Context) {
 // @Produce json
 // @Param id path string true "Message ID"
 // @Success 204 "No Content"
-// @Failure 404 {object} jsonResponse
-// @Failure 500 {object} jsonResponse
+// @Failure 404 {object} types.jsonResponse
+// @Failure 500 {object} types.jsonResponse
 // @Router /messages/{id} [delete]
 func DeleteMessage(c *gin.Context) {
 	id := c.Param("id")
